--- a/demos/demo.html
+++ b/demos/demo.html
@@ -13,6 +13,6 @@
 			<a href="/products?location=/newsletters" class="o-buttons o-buttons--big" data-trackable="newsletters-upgrade">Upgrade<span class="n-util-visually-hidden">&nbsp; your subscription to receive {{name}}</span></a>
 		</div>
 	{{else}}
-		{{>shared/newsletter-form}}
+		{{>newsletter-form}}
 	{{/if}}
 </div>
