--- a/demos/demo-layout.html
+++ b/demos/demo-layout.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		{{{body}}}
-		<script src="/public/client/main.js"></script>
+		<script src="/public/main.js"></script>
 	</body>
 </html>
