--- a/demos/demo.html
+++ b/demos/demo.html
@@ -1,5 +1,8 @@
 <div class="o-grid-container">
 	<div class="o-grid-row">
+		<h1>n-newsletter-signup demo</h1>
+	</div>
+	<div class="o-grid-row">
 		<div data-o-grid-colspan="12 S6 M4 L3">
 			{{> n-newsletter-signup/templates/newsletter flags=@root.flags}}
 		</div>
