INline variant of newsletter signup  🐿 v2.5.16

--- a/demos/demo.html
+++ b/demos/demo.html
@@ -7,4 +7,13 @@
 			{{> n-newsletter-signup/templates/newsletter flags=@root.flags}}
 		</div>
 	</div>
+
+
+	<h2>Simple inline</h2>
+
+	<div class="o-grid-row">
+		<div data-o-grid-colspan="12 L7 XLoffset1">
+			{{> n-newsletter-signup/templates/simple flags=@root.flags}}
+		</div>
+	</div>
 </div>
