change id for second demo so pa11y is happy 🐿 v2.12.5

--- a/demos/demo.html
+++ b/demos/demo.html
@@ -13,7 +13,7 @@
 
 	<div class="o-grid-row">
 		<div data-o-grid-colspan="12 L7 XLoffset1">
-			{{> n-newsletter-signup/templates/simple flags=@root.flags}}
+			{{> n-newsletter-signup/templates/simple flags=@root.flags id=12346}}
 		</div>
 	</div>
 </div>
