Upgrade n-ui-foundations ^4.0.0-beta.2 -> ^6.0.0

--- a/demos/demo.html
+++ b/demos/demo.html
@@ -1,4 +1,4 @@
-<div class="o-grid-container">
+<div class="o-grid-container o-grid-container--snappy">
 	<div class="o-grid-row">
 		<h1>n-newsletter-signup demo</h1>
 	</div>
