--- a/demos/demo.html
+++ b/demos/demo.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/public/main.css">
 <div class="o-grid-container o-grid-container--snappy">
 	<div class="o-grid-row">
 		<h1>n-newsletter-signup demo</h1>
