--- a/demos/demo.html
+++ b/demos/demo.html
@@ -9,18 +9,29 @@
 			<div class="o-grid-row">
 				<h1>n-newsletter-signup demo</h1>
 			</div>
+
+			<h2>Default component</h2>
+
 			<div class="o-grid-row">
 				<div data-o-grid-colspan="12 S6 M4 L3">
-					{{> n-newsletter-signup/templates/newsletter flags=@root.flags}}
+					{{> n-newsletter-signup/templates/newsletter default flags=@root.flags}}
 				</div>
 			</div>
 
 
-			<h2>Simple inline</h2>
+			<h2>Simple inline component</h2>
 
 			<div class="o-grid-row">
 				<div data-o-grid-colspan="12 L7 XLoffset1">
-					{{> n-newsletter-signup/templates/simple flags=@root.flags id=12346}}
+					{{> n-newsletter-signup/templates/simple default flags=@root.flags id=12346}}
+				</div>
+			</div>
+
+			<h2>Simple inline with image component</h2>
+
+			<div class="o-grid-row">
+				<div data-o-grid-colspan="12 L7 XLoffset1">
+					{{> n-newsletter-signup/templates/simple defaultWithImage flags=@root.flags id=12346}}
 				</div>
 			</div>
 		</div>
